# ttff

./: .gitignore  .gitmodules  worktree-init.sh
libcme/: Cargo.toml
libcme/scripts/svdparser/: .gitignore  pyproject.toml  setup.py
libcme/scripts/svdparser/svdparser/: __init__.py  __main__.py  generate.py  models.py  nrf52840.svd.json  parse.py  template.py  utils.py
libcme/src/: lib.rs  test.rs  types.rs
libcme/src/backend/: mmap.rs  mod.rs
libcme/src/backend/armv7m/: events.rs  exception.rs  faults.rs  helpers.rs  mmap.rs  mod.rs  system.rs  tests.rs
libcme/src/concrete/: context.rs  error.rs  eval.rs  mod.rs  types.rs
libcme/src/concrete/arch/: cm3.rs  mod.rs
libcme/src/concrete/context/: mod.rs
libcme/src/dft/: error.rs  mod.rs  test.rs
libcme/src/dft/context/: mod.rs  (+1 more)
libcme/src/dtt/: mod.rs  test.rs
libcme/src/peripheral/: channel.rs  dummy.rs  mod.rs
libcme/src/programdb/: cfg.rs  mod.rs  platform.rs  program.rs  types.rs
libcme/src/utils/: conversion.rs  iter.rs  load.rs  mod.rs  render.rs  sort.rs  trace.rs  validation.rs
libcme/tests/: test_blinky.rs
ttff/: Cargo.toml
ttff/data/: gen-yml.py  processors
ttff/data/nrf52/: nrf52.svd  nrf52.yml  nrf52.yml.bak
ttff/examples/: uart-address.rs  uart-int-overflow.rs  uart-jump.rs
ttff/examples/ficr/: mod.rs
ttff/examples/gpio/: mod.rs
ttff/examples/samples/: README.md
ttff/examples/uart/: mod.rs
ttff/examples/uart-address/: uart-address.blk-cov.tsv  uart-address.simple-cfg.json  uart-address.tainted-locs.tsv
ttff/examples/uart-int-overflow/: uart-int-overflow.blk-cov.tsv  uart-int-overflow.simple-cfg.json  uart-int-overflow.tainted-locs.tsv
ttff/examples/uart-jump/: uart-jump.blk-cov.tsv  uart-jump.simple-cfg.json  uart-jump.tainted-locs.tsv
ttff/examples/uicr/: mod.rs
ttff/scripts/: environment.yml  parse-logs.py  plot_samples.py  render_cfg.py  render_samples.py
ttff/scripts/rendered-cfgs/: uart-address.simple-cfg.dot  uart-address.simple-cfg.html  uart-int-overflow.simple-cfg.dot  uart-int-overflow.simple-cfg.html  uart-jump.simple-cfg.dot  uart-jump.simple-cfg.html
ttff/src/: lib.rs
ttff/src/harness/: mod.rs  sc.rs
ttff/src/instrumentation/: cmplog.rs  covmap.rs  csbc.rs  hc.rs  mem.rs  mod.rs  ttrace.rs
ttff/src/policy/: address.rs  jump.rs  mod.rs  overflow.rs
ttff/tests/: test_fuzz_sc_blinky-o0.rs
(+164 files in other folders)
