[package]
name = "ttff"
version = "0.1.0"
edition = "2024"

[dependencies]
libcme = { path = "../libcme" }
tracing = "0.1"
tracing-subscriber = "0.3"
fugue-core = { path = "../fugue-core/fugue-core" }
fugue-bv = { path = "../fugue-core/fugue-bv" }
fugue-bytes = { path = "../fugue-core/fugue-bytes" }
fugue-ir = { path = "../fugue-core/fugue-ir" }
fugue-arch = { path = "../fugue-core/fugue-arch" }
anyhow = "1"
thiserror = "1"
serde = "1.0"
serde_json = "1.0"
parking_lot = "0.12"
ahash = "0.8"
nohash = "0.2.0"
iset = "0.3.0"
dyn-clone = "1"
bumpalo = { version = "3.16.0", features = ["collections"] }
flagset = "0.4.6"
bitfield-struct = "0.9.0"
derive_more = { version = "1", features = ["full"] }
bit-iter = "1.2.0"
itertools = "0.13.0"
petgraph = "0.8.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }


